@startuml Reations
!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

entity users{
* id: TEXT <PK> INTEGER
--
* user_name: TEXT
* email: TEXT
* Password: TEXT
--
image: BLOB
}

entity identities{
* id: TEXT <PK> INTEGER
* user_id: TEXT <FK>
* identity_type_id: NUMBER <FK>
--
* name: TEXT
--
summary: TEXT
}

enum identity_types{
* id: NUMBER <PK>
--
* type: TEXT
* description: TEXT
* value: NUMBER
}

entity environments{
* id: TEXT <PK> INTEGER
* user_id: TEXT <FK>
--
* name: TEXT
intention: TEXT
photo: BLOB
distribution_status: NUMBER
}

entity areas{
* id: TEXT <PK> INTEGER
* enviroment_id <FK>
--
name
photo: BLOB
purpose: TEXT
usage_status: NUMBER
}

entity habits {
* id: TEXT <PK> INTEGER
* trigger_id: TEXT <FK>
* reward_id: TEXT <FK>
--
* name: TEXT
* trend: TEXT
* reafirmation_counter: NUMBER
}

enum habit_types{
* id: TEXT <PK> INTEGER
--
* type: TEXT
* description: TEXT
* value: NUMBER
}

entity flows{
* routine_id: TEXT INTEGER
* identity_id: TEXT <FK>
* habit_id <FK>
--
* habit_position: NUMBER
}

entity routines{
* id: TEXT INTEGER
* objective: TEXT
healthy_status: NUMBER
}

entity habit_triggers{
* id: TEXT <PK> INTEGER
--
signal: TEXT
desire: TEXT
}

entity habit_rewards{
* id: TEXT <PK> INTEGER
--
* result: TEXT
* action: TEXT
}

entity habit_trackers{
* id: NUMBER AUTO INCREMENT
* habit_id: TEXT
--
* timestamp: TEXT
* duration: NUMBER
* tipe_units_id: NUMBER
}

enum time_units{
* id: TEXT <PK> INTEGER
--
* simbol: TEXT
* name: TEXT
* value_in_seconds: NUMBER
}

users ||--o{ identities
users ||--o{ environments
environments  ||--|{ areas
identities ||--o{ flows
identities ||--|| identity_types
flows }|--|| habits
flows ||--|| routines
habits ||--|| areas
habits ||--|| habit_types
habits ||--|| habit_triggers
habits ||--|| habit_rewards
habit_trackers }|--o| habits
habit_trackers ||-|| time_units
@enduml